# home-automation

./: .gitignore  LICENSE  Makefile  README.md
deephome/: CMakeLists.txt
deephome/common/: CMakeLists.txt
deephome/common/include/client/: CanNode.h  Command.h  CommonTypes.h  Device.h  Dispatcher.h  Result.h  Serializer.h
deephome/common/include/proto/: CommonTypes.h  Connection.h  Message.h  SocketConnection.h  SocketServer.h
deephome/common/include/util/: Assert.h  Config.h  EventLoop.h  Log.h  NonCopyable.h  Runtime.h
deephome/common/source/client/: CanNode.cpp  Command.cpp  Device.cpp  Dispatcher.cpp
deephome/common/source/proto/: Connection.cpp  Message.cpp  SocketConnection.cpp  SocketServer.cpp
deephome/common/source/util/: Config.cpp  EventLoop.cpp  Log.cpp  Runtime.cpp
deephome/common/test/: test_proto.cpp
deephome/controller/: CommonTypes.h  HttpServer.cpp  HttpServer.h  Request.cpp  Request.h
deephome/gtest/: CMakeLists.txt
deephome/router/: Application.cpp  Application.h  CMakeLists.txt  Config.cpp  Config.h  Router.cpp  Router.h  main.cpp
deephome/test/: CMakeLists.txt
deephome/test/netstub/: CMakeLists.txt  dhrouter-test.conf  netstub.cpp
devices/lib/pidev/: __init__.py  config.py  flow.py  monitor.py  periodic.py  temp.py
etc/: websensor.json
firmware/: Makefile
firmware/shared/include/ha/: can_node.h  can_proto.h
firmware/stm8/: Makefile
firmware/stm8/can_node/: Makefile  atomic.c  atomic.h  can.c  can.h  clock.c  clock.h  eestream.c  eestream.h  error.h  led.c  led.h  main.c  mod_analog.c  mod_analog.h  mod_button.c  mod_button.h  mod_ds18b20.c  mod_ds18b20.h  mod_proto.c  mod_proto.h  mod_switch.c  mod_switch.h  module.c  module.h  onewire.c  onewire.h  sysinfo.c  sysinfo.h
firmware/stm8/libstm8s/: Makefile
firmware/stm8/libstm8s/include/: stm8s.h
firmware/stm8/libstm8s/src/: stm8s_adc1.c  stm8s_adc2.c  stm8s_can.c  stm8s_itc.c  stm8s_tim1.c  stm8s_tim2.c  stm8s_tim3.c  stm8s_tim4.c  stm8s_tim5.c  stm8s_tim6.c  stm8s_uart1.c  stm8s_uart2.c  stm8s_uart3.c  stm8s_uart4.c
firmware/stm8/test/: Makefile  main.c
firmware/ti/: Makefile
firmware/ti/can_master/: Makefile  board_impl.h  can.cpp  can.h  can_master.cfg  can_server.cpp  can_server.h  main.cpp  nethook.c
firmware/ti/heater/: Makefile  board.c  board.h  heater.cfg  main.cpp  nethook.c  tcp_server.cpp
firmware/ti/include/onewire/: Session.h  onewire.h
firmware/ti/onewire/: Makefile  Master.cpp  Session.cpp  ThermometerSession.cpp  crc.cpp
schematics/: Makefile  pselectro.dru
schematics/lib/: allegro-2.lbr  connector.lbr  cpc1030n.lbr  ds18b20.lbr  relay-trv.lbr  stm8s208s.lbr  transistor.lbr
schematics/pi_cal/: Makefile  PiCal.brd  PiCal.sch
schematics/sensor/: power-ctl.brd  power-ctl.sch  sensor-sm.brd  sensor-sm.sch  sensor.brd  sensor.sch
schematics/ti_can/: Makefile  ti_can.brd  ti_can.sch
(+7 files in other folders)
